--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,10 +13,16 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "antd": "^4.16.13",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
+    "luxon": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.3",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -25,7 +32,53 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "semi": "warn",
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "no-trailing-spaces": [
+        "error",
+        {
+          "skipBlankLines": true,
+          "ignoreComments": true
+        }
+      ],
+      "implicit-arrow-linebreak": 0,
+      "brace-style": [
+        "error",
+        "1tbs"
+      ],
+      "arrow-body-style": [
+        "error",
+        "as-needed"
+      ],
+      "indent": [
+        "error",
+        2
+      ],
+      "eol-last": [
+        "error",
+        "never"
+      ]
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/*.ts?(x)"
+        ],
+        "rules": {}
+      }
+    ]
   },
   "browserslist": {
     "production": [
@@ -38,5 +91,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/luxon": "^2.0.5",
+    "@types/react-router-dom": "^5.3.1"
   }
 }
